--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@next/mdx": "^15.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-spring/web": "^9.7.5",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
