--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/mdx": "^15.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@react-spring/web": "^9.7.5",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +25,7 @@
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "15.1.6",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.0",
